# sg90-rp2040-test

./: .gitignore  CMakeLists.txt
include/: sg90.h
src/: sg90.c
test/: CMakeLists.txt
test/sg90_invKin/: CMakeLists.txt  sg90_invKin.c
test/sg90_spin/: CMakeLists.txt  sg90_spin.c
